--- a/tildagon.toml
+++ b/tildagon.toml
@@ -3,8 +3,8 @@
 name = "Fluroclock"
 
 # The submenu where your app should appear.
-# One of: "Badge", "Music", "Media", "Apps", "Games"
-category = "Media"
+# One of: "Badge", "Music", "Media", "Apps", "Games", "Background"
+category = "Apps"
 
 # OPTIONAL: Same as above, for compatibility with older firmware
 # versions that can't handle categories introduced afterwards.
