--- a/tildagon.toml
+++ b/tildagon.toml
@@ -36,5 +36,5 @@ description = "Control the Fluroclock at EMF, from your badge!"
 # Version number of your app.  If you push a commit where this number is
 # increased, we interpret this as a new version being released.
 #
-# Version number must be an integer!
+# Version number must be an String!
 version = "0.0.5"
